@@ -29,7 +29,7 @@ BEGIN {
 
 # Version information
 my
-$VERSION = '1.78';
+$VERSION = '1.79';
 
 
 =head1 NAME
