@@ -1,5 +1,7 @@
 2007-02-03  Hans de Graaff  <hans@degraaff.org>
 
+	* Checkbot 1.79 is released
+
 	* RELEASE-PROCESS: Add the release process documentation.
 
 2007-01-27  Gerald Pfeifer  <gerald@pfeifer.com>
